[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/CardTable/BehaviorIndicator.gd" type="Script" id=1]

[node name="Control" type="Control"]
modulate = Color( 0, 0.678431, 0.0117647, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1540.0
margin_bottom = -840.0
script = ExtResource( 1 )

[node name="TexRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
expand = true
stretch_mode = 6

[node name="LblVal" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.0
margin_bottom = 3.0
text = "0.0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblSkilled" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -14.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "+"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
